external-ingressroutes/homeassistant/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: service-homeassistant
  namespace: default
subsets:
  - addresses:
      - ip: <fill in ip address of homeassistant here>
    ports:
      - name: http
        port: 8123
