external-ingressroutes/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-homeassistant
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
